# mysql_auto_dump

./: .env  Cargo.toml  README.md
src/: main.rs
