[package]
name = "mysql_auto_dump"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "*"
anyhow="*"
chrono = "*"
reqwest = { version = "0.11.10", features = ["json", "cookies", "gzip", "tokio-native-tls", "stream"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
strip = true
debug = false
opt-level = 3